--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,12 +1,18 @@
 <h2>New Post</h2>
-<hr>
 <%= form_for @post, html: {multipart: true} do |f| %>
-  <%= f.label :image %>
-  <%= f.file_field :image, multiple: true %>
-  <br>
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-  <br>
-  <%= f.submit :post %>
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.label :description %>
+    <%= f.text_area :description , class: "form-control"%>
 
-  <% end %> 
+  </div>
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, multiple: true, class: "form-control-file" %>
+  </div>
+  <%= f.submit :submit ,class: "btn btn-primary" %>
+
+<% end %>
