--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,7 @@
-<%= image_tag(@post.image.url) %>
+<% @post.images.each do |x|%>
+  <%= image_tag(x.image.url) %>
+<% end %>
 <br>
+<%= @post.title %>
+</br>
 <%= @post.description %>
