--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,16 +15,18 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class=""><a href="#">Home <span class="sr-only">(current)</span></a></li>
-        <li class=""><a href="#">Profile <span class="sr-only">(current)</span></a></li>
+        <li class=""><a href="/">Home <span class="sr-only">(current)</span></a></li>
+        <%#= link_to "Profile" , @profile %>
+        <li class=""><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Profile</a></li>
-              <li><a href="#">Logout</a></li>
+<!--              <li><%#= link_to "Profile", @profile %></li>-->
+              <li><a href="/profile">Profile</a></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
@@ -37,7 +39,6 @@
             </li>
           </ul>
           <% end %>
-
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
