--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,9 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "bootstrap/theme";
+ @import "imageview";
  @import "posts";
+ @import "images";
 
 .bx-wrapper img {
   max-width: 100%;
