--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,88 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>InstagramApp</title>
+<head>
+  <title>InstagramApp</title>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-
-    <%= csrf_meta_tags %>
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <script>
-        function preview_images()
-        {
-            var total_file=document.getElementById("images").files.length;
-            for(var i=0;i<total_file;i++)
-            {
-                $('#image_preview').append("<div class='col-md-3'><img class='img-responsive' src='"+URL.createObjectURL(event.target.files[i])+"'><input type='button' value='Remove' onclick='removeImage("+i+")'> </div>");
-            }
-        }
-        function removeImage(i) {
-            file=document.getElementById("images").files;
+  
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= csrf_meta_tags %>
+  <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+  <!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
+  <!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+  <script>
+    function preview_images()
+    {
+      var total_file=document.getElementById("images").files.length;
+      for(var i=0;i<total_file;i++)
+      {
+        $('#image_preview').append("<div class='col-md-3'><img class='img-responsive' src='"+URL.createObjectURL(event.target.files[i])+"'><input type='button' value='Remove' onclick='removeImage("+i+")'> </div>");
+      }
+    }
+    function removeImage(i) {
+      file=document.getElementById("images").files;
 
             //alert(file[i]);
             // file.splice(i,1);
             preview_images();
-        }
-    </script>
-  </head>
-  <body>
-  <%= render 'layouts/header' %>
-       <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to "P CRUD", root_url, class: "navbar-brand" %>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
+          }
+        </script>
+      </head>
+      <body>
+        <%= render 'layouts/header' %>
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <%= link_to "P CRUD", root_url, class: "navbar-brand" %>
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
 
-            <li >
-              <% if user_signed_in? %>
-              <%= link_to "New Post", new_post_path %>
-              <% end %>
-            </li>
-           <% if current_user %>
-              <li>
-                <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-              </li>
-           <% else %>
-           <li>
-             <%= link_to "Login", new_user_session_path %>
-           </li>
-           <li>
-             <%= link_to "Signup", new_user_registration_path %>
-           </li>
-           <% end %>
-          </ul>
-        </div>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
+                <li >
+                  <% if user_signed_in? %>
+                  <%= link_to "New Post", new_post_path %>
+                  <% end %>
+                </li>
+                <% if current_user %>
+                <li>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+                </li>
+                <% else %>
+                <li>
+                 <%= link_to "Login", new_user_session_path %>
+               </li>
+               <li>
+                 <%= link_to "Signup", new_user_registration_path %>
+               </li>
+               <% end %>
+             </ul>
+           </div>
+         </div>
+       </div>
+     </nav>
+     <!-- Page Content -->
+     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-12 text-center">
           <% flash.each do |a, b| %>
-            <div class="alert alert-success">
-              <%= b %>
-            </div>
+          <div class="alert alert-success">
+            <%= b %>
+          </div>
           <% end %>
-           <%= yield %>
+          <%= yield %>
         </div>
-       </div>
+      </div>
     </div>
     <style> body {padding-top: 70px;}</style>
   </body>
-</html>
+  </html>
