--- a/app/views/posts/_image.html.erb
+++ b/app/views/posts/_image.html.erb
@@ -1,5 +1,16 @@
-<div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="img01">
-  <div id="caption"></div>
+
+
+
+<!-- Modal -->
+
+<div id="image-view">
+<%images.each do |image|%>
+  <a href="<%= image.image.url%>">
+    <img src="<%= image.image.url%>">
+  </a>
+ <% end %>
 </div>
+
+
+
+
