--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,41 +1,31 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="user">
-      <%= post.user.name %>
+    <div class="row">
+      <div class="col-d-12">
+        <div class="user">
+          <%= post.user.name %>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="title">
-      <%= post.title %>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="title">
+          <%= post.title %>
+        </div>
+        <div class="description">
+          <%= post.description %>
+        </div>
+      </div>
     </div>
-    <div class="description">
-      <%= post.description %>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-7">
-    <div class="bxslider">
-     <% post.images.each do |image|%>
-     <a href="/pics/<%=image.id%>"> <%= image_tag(image.image.url,id:'user-image', size: "700x500") %> </a>
-     <% end %>
-   </div>
- </div>
- <div id="myModal" class="modal">
-  <span class="close">&times;</span>
-  <img class="modal-content" id="user-image">
-  <div id="caption"></div>
-</div>
- <%= render partial: 'comments/index', locals: { comments: post.comments } %>
- <%= render partial: 'comments/form', locals: { post: post } %>
- </div>
- </div>
- <% if user_signed_in? %>
- <%= link_to "Edit", edit_post_path(post) %>
- <%= link_to "Destroy", post, method: :delete, data: {confirm: "Are you sure?"} %>
- <% end %>
-</div>
+    <div class="row">
+      <div class="col-md-7">
+        <div class="bxslider" id="image-view">
+         <% post.images.each do |image|%>
+         <a class="sb" href="<%= image.image.url %>"> <%= image_tag(image.image.url, size: "700x500") %> </a>
+         <% end %>
+       </div>
+     </div>
+     
+
+
+
 
 
