--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,5 +1,22 @@
-<div class="container">
-  <% @posts.each do |post| %>
+<div class="row">
+<div class="col-md-3"></div>
+<div class="col-md-6">
+   <% @posts.each do |post| %>
   <%= render partial: 'posts/post', locals: { post: post } %>
+  <%= render partial: 'comments/index', locals: { comments: post.comments } %>
+     <%= render partial: 'comments/form', locals: { post: post } %>
+
+     <% if user_signed_in? %>
+     <%= link_to "Edit", edit_post_path(post) %>
+     <%= link_to "Destroy", post, method: :delete, data: {confirm: "Are you sure?"} %>
+     <% end %>
+   </div>
+ </div>
+
   <% end %>
 </div>
+<div class="col-md-3"></div>
+</div>
+  
+
+
