--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,17 +14,32 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap-sprockets";
- @import "bootstrap";
- @import "bootstrap/theme";
- @import "imageview";
- @import "posts";
- @import "images";
-
+ 
 .bx-wrapper img {
   max-width: 100%;
   display: inline;
 }
+.button-request{
+  margin: 15px;
+}
+.button {
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+.button-green {
+    background-color: #4CAF50;
+}
+.button-red {
+    background-color: #ff0000;
+}
+
 div.pic {
   margin: auto;
   padding: 10px;
@@ -86,6 +101,19 @@ p.lead {
 }
 .hide-edit{
   display: none;
+}
+.numberCircle {
+    position: absolute;
+    width: 30px;
+    line-height: 30px;
+    border-radius: 100%;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 100;
+    top:0px;
+    right: 5px;
+    border: 2px solid #666;
+    background-color: red;
 }
 
 
