--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,77 @@
-<h2>Sign up</h2>
+ <div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100">
+      <div class="login100-pic js-tilt" data-tilt>
+        <%= image_tag("img-01.png", :alt => "image") %>
+      </div>
+     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+     <%= devise_error_messages! %>
+      <span class="login100-form-title">
+        Register New User
+      </span>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <div class="wrap-input100">
+        <%= f.text_field :name, class: "input100" ,placeholder: "Full Name", autofocus: true%>
+        <span class="focus-input100"></span>
+        <span class="symbol-input100">
+          <i class="fa fa-user" aria-hidden="true"></i>
+        </span>
+      </div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true%>
-  </div>
+      <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+        <%= f.email_field :email, class: "input100" ,placeholder: "Email Address", autofocus: true, autocomplete: "email" %>
+        <span class="focus-input100"></span>
+        <span class="symbol-input100">
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+        </span>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
+      <div class="wrap-input100 validate-input" data-validate = "Password is required">
+      <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <% end %>
+       <%= f.password_field :password,class: "input100",placeholder: "Password", autocomplete: "off" %>
+       <span class="focus-input100"></span>
+       <span class="symbol-input100">
+        <i class="fa fa-lock" aria-hidden="true"></i>
+      </span>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+     <div class="wrap-input100 validate-input" data-validate = "Password is required">
+       <%= f.password_field :password,class: "input100", placeholder: "Confirm Password",autocomplete: "off" %>
+       <span class="focus-input100"></span>
+       <span class="symbol-input100">
+        <i class="fa fa-lock" aria-hidden="true"></i>
+      </span>
+    </div>
+    
+    <div class="container-login100-form-btn">
+      <button class="login100-form-btn">
+        Submit
+      </button>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+    <div class="text-center p-t-12">
+      <span class="txt1">
+        Forgot
+      </span>
+      <a class="txt2" href="#">
+        Username / Password?
+      </a>
+    </div>
+    <div class="text-center p-t-136">
+      <a class="txt2" href="#">
+        Alredy had account
+        <i class="fa fa-long-arrow-left m-l-5" aria-hidden="true"></i>
+      </a>
+    </div>
+    <% end %>
   </div>
-<% end %>
-
+</div>
+</div>
+<script>
+  $('.js-tilt').tilt({
+    scale: 1.1
+  })
+</script>
 <%= render "devise/shared/links" %>
