--- a/app/views/posts/home.html.erb
+++ b/app/views/posts/home.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col-md-3"></div>
+  <div class="col-md-3">
+       <%= render partial: 'friend_request/request', locals: { users: @users } %>
+  </div>
   <div class="col-md-6">
    <% @posts_home.each do |post| %>
    <%= render partial: 'posts/post', locals: { post: post } %>
