Friend Request and response

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,24 +97,12 @@ p.lead {
 }
 
 .far:hover {
-  color: darkblue;
+  color: idarkblue;
 }
 .hide-edit{
   display: none;
 }
-.numberCircle {
-    position: absolute;
-    width: 30px;
-    line-height: 30px;
-    border-radius: 100%;
-    text-align: center;
-    font-size: 15px;
-    font-weight: 100;
-    top:0px;
-    right: 5px;
-    border: 2px solid #666;
-    background-color: red;
-}
+
 
 
 
