--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="col-md-12">
     <div class="col-md-3">
@@ -5,44 +6,70 @@
     <div class="col-md-6">
       <div class="col-md-12 profile-img">
         <div class="fb-profile" style="margin-top: 50px;">
-          <%= image_tag("profilecover.jpg", size: "700x500", align: "left" ,class: "fb-image-lg", alt: "profile-img") %>
+          <%= image_tag("profilecover.jpg", size: "700x500",id:"output_cover_image", align: "left" ,class: "fb-image-lg", alt: "profile-img") %>
+
+          <input type="file" id="cover-pic-change" name="profile-pic" style="opacity: 0; position: absolute;" name= "image" onchange="preview_cover_image(event)"  >
           <div class="overlay">
-              <a href="#" class="icon" title="Change Cover Pic">
-                <i class="fas fa-camera"></i>
-              </a>
+            <a href="#"  class="icon" title="Change Cover Pic">
+              <i class="fas fa-camera" onclick='$("#cover-pic-change").click()' accept="image/*" ></i>
+            </a>
           </div>
-         <%= image_tag("cover.jpg",align: "left" ,class: "fb-image-profile thumbnail", alt: "profile-img") %>
-         <div class="overlay-profile">
-              <a href="#" class="icon-profile" title="Change Cover Pic">
-                <i class="fas fa-camera"> Update profile pic</i>
-              </a>
+
+          <%= image_tag("cover.jpg",align: "left" ,id: "output_profile_image",class: "fb-image-profile thumbnail", alt: "profile-img") %>
+          <input type="file" id="profile-pic-change" name="profile-pic" style="opacity: 0; position: absolute;" name= "image" onchange="preview_profile_image(event)"  >
+          <div class="overlay-profile">
+            <a href="#"  class="icon-profile" title="Change Profile Pic">
+              <i class="fas fa-camera" onclick='$("#profile-pic-change").click()' accept="image/*" ></i> 
+            </a>
+          </div>
+          <a href="#"><input type="button" class="btn btn-primary" value="Upload" id="profile-upload"> </a>
+          <a href="#"><input type="button" class="btn btn-primary" value="Upload" id="cover-upload"> </a>
+          <div class="profile-name">
+            <h1>Eli Macy</h1>
           </div>
           <div class="fb-profile-text">
-            <h1>Eli Macy</h1>
-            <p>Girls just wanna go fun.</p>
+            <div class="col-md-12">
+              <%= render partial: 'layouts/second_nav', locals: { post: @post }  %>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="row">
+       <div class="col-md-12">
+        <div id="profile-friend-list">
+         
+        </div>
       </div>
     </div>
+    <div class="row">
+       <div class="col-md-12">
+        <div id="profile-image-list">
+         
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+    </div>
+
   </div>
-  <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-     <% @posts.each do |post| %>
-     <%= render partial: 'posts/post', locals: { post: post } %>
-     <%= render partial: 'comments/index', locals: { comments: post.comments } %>
-     <%= render partial: 'comments/form', locals: { post: post } %>
+</div>
 
-     <% if user_signed_in? %>
-     <%= link_to "Edit", edit_post_path(post) %>
-     <%= link_to "Destroy", post, method: :delete, data: {confirm: "Are you sure?"} %>
-     <% end %>
-   </div>
+<div class="row" id="profile-post">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+   <% @posts.each do |post| %>
+   <%= render partial: 'posts/post', locals: { post: post } %>
+   <%= render partial: 'comments/index', locals: { comments: post.comments } %>
+   <%= render partial: 'comments/form', locals: { post: post } %>
+
+   <% if user_signed_in? %>
+   <%= link_to "Edit", edit_post_path(post) %>
+   <%= link_to "Destroy", post, method: :delete, data: {confirm: "Are you sure?"} %>
+   <% end %>
  </div>
+</div>
 
- <% end %>
+<% end %>
 </div>
 <div class="col-md-3"></div>
 </div>
